--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -69,5 +69,13 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/judul_hasil" />
 
+    <TextView
+        android:id="@+id/about"
+        android:gravity="center"
+        android:text="Copyright (c) PringStudio.Com 2016"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
+
 
 </RelativeLayout>
